@@ -1572,7 +1572,7 @@ parameter_list|()
 throws|throws
 name|IOException
 function_decl|;
-comment|/**    * Rolling upgrade operations.    * @param action either query, prepare or finalize.    * @return rolling upgrade information.    */
+comment|/**    * Rolling upgrade operations.    * @param action either query, prepare or finalize.    * @return rolling upgrade information. On query, if no upgrade is in    * progress, returns null.    */
 annotation|@
 name|Idempotent
 DECL|method|rollingUpgrade (RollingUpgradeAction action)
