@@ -30907,11 +30907,22 @@ try|try
 block|{
 if|if
 condition|(
-name|rollingUpgradeInfo
-operator|!=
-literal|null
+operator|!
+name|isRollingUpgrade
+argument_list|()
 condition|)
 block|{
+return|return
+literal|null
+return|;
+block|}
+name|Preconditions
+operator|.
+name|checkNotNull
+argument_list|(
+name|rollingUpgradeInfo
+argument_list|)
+expr_stmt|;
 name|boolean
 name|hasRollbackImage
 init|=
@@ -30930,7 +30941,6 @@ argument_list|(
 name|hasRollbackImage
 argument_list|)
 expr_stmt|;
-block|}
 return|return
 name|rollingUpgradeInfo
 return|;
