@@ -40,11 +40,105 @@ begin_import
 import|import
 name|java
 operator|.
+name|lang
+operator|.
+name|management
+operator|.
+name|ManagementFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|concurrent
 operator|.
 name|ThreadLocalRandom
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|management
+operator|.
+name|AttributeNotFoundException
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|management
+operator|.
+name|InstanceNotFoundException
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|management
+operator|.
+name|MBeanException
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|management
+operator|.
+name|MBeanServer
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|management
+operator|.
+name|MalformedObjectNameException
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|management
+operator|.
+name|ObjectName
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|management
+operator|.
+name|ReflectionException
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|management
+operator|.
+name|openmbean
+operator|.
+name|CompositeDataSupport
 import|;
 end_import
 
@@ -414,7 +508,31 @@ name|junit
 operator|.
 name|Assert
 operator|.
-name|assertTrue
+name|assertEquals
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertNotEquals
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertNull
 import|;
 end_import
 
@@ -468,8 +586,6 @@ condition|(
 name|success
 condition|)
 block|{
-name|Assert
-operator|.
 name|assertEquals
 argument_list|(
 literal|0
@@ -620,6 +736,9 @@ argument_list|,
 literal|"abc"
 argument_list|)
 expr_stmt|;
+name|checkMxBeanIsNull
+argument_list|()
+expr_stmt|;
 comment|//query rolling upgrade
 name|runCmd
 argument_list|(
@@ -672,6 +791,9 @@ argument_list|,
 literal|"query"
 argument_list|)
 expr_stmt|;
+name|checkMxBean
+argument_list|()
+expr_stmt|;
 name|dfs
 operator|.
 name|mkdirs
@@ -690,6 +812,23 @@ literal|"-rollingUpgrade"
 argument_list|,
 literal|"finalize"
 argument_list|)
+expr_stmt|;
+comment|// RollingUpgradeInfo should be null after finalization, both via
+comment|// Java API and in JMX
+name|assertNull
+argument_list|(
+name|dfs
+operator|.
+name|rollingUpgrade
+argument_list|(
+name|RollingUpgradeAction
+operator|.
+name|QUERY
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|checkMxBeanIsNull
+argument_list|()
 expr_stmt|;
 name|dfs
 operator|.
@@ -1215,8 +1354,6 @@ name|info1
 argument_list|)
 expr_stmt|;
 comment|//query rolling upgrade
-name|Assert
-operator|.
 name|assertEquals
 argument_list|(
 name|info1
@@ -1335,8 +1472,6 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 comment|//query rolling upgrade in cluster2
-name|Assert
-operator|.
 name|assertEquals
 argument_list|(
 name|info1
@@ -1370,8 +1505,6 @@ operator|.
 name|restartNameNode
 argument_list|()
 expr_stmt|;
-name|Assert
-operator|.
 name|assertEquals
 argument_list|(
 name|info1
@@ -1461,8 +1594,6 @@ operator|.
 name|restartNameNode
 argument_list|()
 expr_stmt|;
-name|Assert
-operator|.
 name|assertEquals
 argument_list|(
 name|info1
@@ -1616,6 +1747,115 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
+DECL|method|getBean ()
+specifier|private
+specifier|static
+name|CompositeDataSupport
+name|getBean
+parameter_list|()
+throws|throws
+name|MalformedObjectNameException
+throws|,
+name|MBeanException
+throws|,
+name|AttributeNotFoundException
+throws|,
+name|InstanceNotFoundException
+throws|,
+name|ReflectionException
+block|{
+name|MBeanServer
+name|mbs
+init|=
+name|ManagementFactory
+operator|.
+name|getPlatformMBeanServer
+argument_list|()
+decl_stmt|;
+name|ObjectName
+name|mxbeanName
+init|=
+operator|new
+name|ObjectName
+argument_list|(
+literal|"Hadoop:service=NameNode,name=NameNodeInfo"
+argument_list|)
+decl_stmt|;
+return|return
+operator|(
+name|CompositeDataSupport
+operator|)
+name|mbs
+operator|.
+name|getAttribute
+argument_list|(
+name|mxbeanName
+argument_list|,
+literal|"RollingUpgradeStatus"
+argument_list|)
+return|;
+block|}
+DECL|method|checkMxBeanIsNull ()
+specifier|private
+specifier|static
+name|void
+name|checkMxBeanIsNull
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|CompositeDataSupport
+name|ruBean
+init|=
+name|getBean
+argument_list|()
+decl_stmt|;
+name|assertNull
+argument_list|(
+name|ruBean
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|checkMxBean ()
+specifier|private
+specifier|static
+name|void
+name|checkMxBean
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|CompositeDataSupport
+name|ruBean
+init|=
+name|getBean
+argument_list|()
+decl_stmt|;
+name|assertNotEquals
+argument_list|(
+literal|0l
+argument_list|,
+name|ruBean
+operator|.
+name|get
+argument_list|(
+literal|"startTime"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0l
+argument_list|,
+name|ruBean
+operator|.
+name|get
+argument_list|(
+literal|"finalizeTime"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 annotation|@
 name|Test
 DECL|method|testRollback ()
@@ -1624,7 +1864,7 @@ name|void
 name|testRollback
 parameter_list|()
 throws|throws
-name|IOException
+name|Exception
 block|{
 comment|// start a cluster
 specifier|final
@@ -1760,6 +2000,9 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+name|checkMxBeanIsNull
+argument_list|()
+expr_stmt|;
 name|startRollingUpgrade
 argument_list|(
 name|foo
@@ -1772,6 +2015,9 @@ name|data
 argument_list|,
 name|cluster
 argument_list|)
+expr_stmt|;
+name|checkMxBean
+argument_list|()
 expr_stmt|;
 name|cluster
 operator|.
@@ -1801,6 +2047,9 @@ name|data
 argument_list|,
 name|cluster
 argument_list|)
+expr_stmt|;
+name|checkMxBeanIsNull
+argument_list|()
 expr_stmt|;
 name|startRollingUpgrade
 argument_list|(
@@ -2321,18 +2570,13 @@ block|,
 name|dnAddr
 block|}
 decl_stmt|;
-name|Assert
-operator|.
-name|assertEquals
+name|runCmd
 argument_list|(
-literal|0
-argument_list|,
 name|dfsadmin
-operator|.
-name|run
-argument_list|(
+argument_list|,
+literal|true
+argument_list|,
 name|args1
-argument_list|)
 argument_list|)
 expr_stmt|;
 comment|// issue shutdown to the datanode.
@@ -2349,18 +2593,13 @@ block|,
 literal|"upgrade"
 block|}
 decl_stmt|;
-name|Assert
-operator|.
-name|assertEquals
+name|runCmd
 argument_list|(
-literal|0
-argument_list|,
 name|dfsadmin
-operator|.
-name|run
-argument_list|(
+argument_list|,
+literal|true
+argument_list|,
 name|args2
-argument_list|)
 argument_list|)
 expr_stmt|;
 comment|// the datanode should be down.
@@ -2384,8 +2623,6 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 comment|// ping should fail.
-name|Assert
-operator|.
 name|assertEquals
 argument_list|(
 operator|-
