@@ -194,28 +194,6 @@ name|apache
 operator|.
 name|hadoop
 operator|.
-name|hdfs
-operator|.
-name|server
-operator|.
-name|namenode
-operator|.
-name|top
-operator|.
-name|window
-operator|.
-name|RollingWindowManager
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
 name|io
 operator|.
 name|nativeio
@@ -387,54 +365,6 @@ operator|.
 name|concurrent
 operator|.
 name|TimeUnit
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hdfs
-operator|.
-name|server
-operator|.
-name|namenode
-operator|.
-name|top
-operator|.
-name|window
-operator|.
-name|RollingWindowManager
-operator|.
-name|Op
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hdfs
-operator|.
-name|server
-operator|.
-name|namenode
-operator|.
-name|top
-operator|.
-name|window
-operator|.
-name|RollingWindowManager
-operator|.
-name|TopWindow
 import|;
 end_import
 
@@ -1641,6 +1571,22 @@ argument_list|(
 name|mxbeanName
 argument_list|,
 literal|"CacheCapacity"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+literal|"RollingUpgradeInfo should be null when there is no rolling"
+operator|+
+literal|" upgrade"
+argument_list|,
+name|mbs
+operator|.
+name|getAttribute
+argument_list|(
+name|mxbeanName
+argument_list|,
+literal|"RollingUpgradeStatus"
 argument_list|)
 argument_list|)
 expr_stmt|;
